fix: product header wrap in section

--- a/titangene/css/styles.css
+++ b/titangene/css/styles.css
@@ -139,19 +139,19 @@ main {
 .product-wrap p {
   text-align: center;
 }
-.product-wrap h2 {
+.product-header h2 {
   font-size: 40px;
   font-family: 'Times New Roman', Times, serif;
   letter-spacing: 12px;
   position: relative;
 }
-.product-wrap hr {
+.product-header hr {
   width: 36px;
   margin: 32px auto;
   border: none;
   border-top: 1px solid #6b6b6c;
 }
-.product-wrap > p {
+.product-header > p {
   font-size: 24px;
   letter-spacing: 5px;
   margin-bottom: 74px;
